@@ -85,7 +85,6 @@ import io.micronaut.core.type.ReturnType;
 import io.micronaut.core.util.ArgumentUtils;
 import io.micronaut.core.util.ArrayUtils;
 import io.micronaut.core.util.CollectionUtils;
-import io.micronaut.core.util.StreamUtils;
 import io.micronaut.core.util.StringUtils;
 import io.micronaut.core.util.clhm.ConcurrentLinkedHashMap;
 import io.micronaut.core.value.PropertyResolver;
@@ -110,6 +109,7 @@ import io.micronaut.inject.ParametrizedInstantiatableBeanDefinition;
 import io.micronaut.inject.ProxyBeanDefinition;
 import io.micronaut.inject.QualifiedBeanType;
 import io.micronaut.inject.ValidatedBeanDefinition;
+import io.micronaut.inject.provider.AbstractProviderDefinition;
 import io.micronaut.inject.proxy.InterceptedBeanProxy;
 import io.micronaut.inject.qualifiers.AnyQualifier;
 import io.micronaut.inject.qualifiers.Qualified;
@@ -121,6 +121,7 @@ import org.slf4j.LoggerFactory;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Method;
+import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -131,7 +132,6 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.IdentityHashMap;
 import java.util.Iterator;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
@@ -139,12 +139,10 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentLinkedQueue;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ForkJoinPool;
 import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.function.Consumer;
-import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -160,19 +158,6 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
     protected static final Logger LOG = LoggerFactory.getLogger(DefaultBeanContext.class);
     protected static final Logger LOG_LIFECYCLE = LoggerFactory.getLogger(DefaultBeanContext.class.getPackage().getName() + ".lifecycle");
-    @SuppressWarnings("rawtypes")
-    private static final Qualifier PROXY_TARGET_QUALIFIER = new Qualifier<>() {
-        @Override
-        public <T extends BeanType<Object>> Stream<T> reduce(Class<Object> beanType, Stream<T> candidates) {
-            return candidates.filter(bt -> {
-                if (bt instanceof BeanDefinitionDelegate<?> delegate) {
-                    return !(delegate.getDelegate() instanceof ProxyBeanDefinition);
-                } else {
-                    return !(bt instanceof ProxyBeanDefinition);
-                }
-            });
-        }
-    };
     private static final String SCOPED_PROXY_ANN = "io.micronaut.runtime.context.scope.ScopedProxy";
     private static final String INTRODUCTION_TYPE = "io.micronaut.aop.Introduction";
     private static final String ADAPTER_TYPE = "io.micronaut.aop.Adapter";
@@ -185,20 +170,23 @@ public class DefaultBeanContext implements InitializableBeanContext {
         return Integer.compare(order1, order2);
     };
 
+
     protected final AtomicBoolean running = new AtomicBoolean(false);
     protected final AtomicBoolean initializing = new AtomicBoolean(false);
     protected final AtomicBoolean terminating = new AtomicBoolean(false);
 
     final Map<BeanIdentifier, BeanRegistration<?>> singlesInCreation = new ConcurrentHashMap<>(5);
-    Set<Map.Entry<Class<?>, List<BeanInitializedEventListener>>> beanInitializedEventListeners;
 
     private final SingletonScope singletonScope = new SingletonScope();
 
     private final BeanContextConfiguration beanContextConfiguration;
-    private final Collection<BeanDefinitionReference> beanDefinitionsClasses = new ConcurrentLinkedQueue<>();
-    private final Collection<BeanDefinitionReference> proxyTargetBeans = new ConcurrentLinkedQueue<>();
 
-    private final Map<BeanKey<?>, BeanDefinitionReference> disabledBeans = new ConcurrentHashMap<>(20);
+    // The collection should be modified only when new bean definition is added
+    // That shouldn't happen that often, so we can use CopyOnWriteArrayList
+    private final Collection<BeanDefinitionProducer> beanDefinitionsClasses = new CopyOnWriteArrayList<>();
+    private final Collection<BeanDefinitionProducer> proxyTargetBeans = new CopyOnWriteArrayList<>();
+
+    private final Map<BeanKey<?>, BeanDefinitionProducer> disabledBeans = new ConcurrentHashMap<>(20);
     private final Map<String, List<String>> disabledConfigurations = new ConcurrentHashMap<>(5);
     private final Map<String, BeanConfiguration> beanConfigurations = new HashMap<>(10);
     private final Map<BeanKey, Boolean> containsBeanCache = new ConcurrentHashMap<>(30);
@@ -214,7 +202,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
     private final Map<Argument, Collection<BeanDefinition>> beanCandidateCache = new ConcurrentLinkedHashMap.Builder<Argument, Collection<BeanDefinition>>().maximumWeightedCapacity(30).build();
 
-    private final Map<Class<?>, Collection<BeanDefinitionReference>> beanIndex = new ConcurrentHashMap<>(12);
+    private final Map<Class<?>, Collection<BeanDefinitionProducer>> beanIndex = new ConcurrentHashMap<>(12);
 
     private final ClassLoader classLoader;
     private final Set<Class<?>> thisInterfaces = CollectionUtils.setOf(
@@ -245,9 +233,10 @@ public class DefaultBeanContext implements InitializableBeanContext {
     private List<BeanDefinitionReference> beanDefinitionReferences;
     private List<BeanConfiguration> beanConfigurationsList;
 
-    private Set<Map.Entry<Class<?>, List<BeanCreatedEventListener<?>>>> beanCreationEventListeners;
-    private Set<Map.Entry<Class<?>, List<BeanPreDestroyEventListener>>> beanPreDestroyEventListeners;
-    private Set<Map.Entry<Class<?>, List<BeanDestroyedEventListener>>> beanDestroyedEventListeners;
+    List<Map.Entry<Class<?>, ListenersSupplier<BeanInitializedEventListener>>> beanInitializedEventListeners;
+    private List<Map.Entry<Class<?>, ListenersSupplier<BeanCreatedEventListener>>> beanCreationEventListeners;
+    private List<Map.Entry<Class<?>, ListenersSupplier<BeanPreDestroyEventListener>>> beanPreDestroyEventListeners;
+    private List<Map.Entry<Class<?>, ListenersSupplier<BeanDestroyedEventListener>>> beanDestroyedEventListeners;
 
     @Nullable
     private MutableConversionService conversionService;
@@ -398,11 +387,11 @@ public class DefaultBeanContext implements InitializableBeanContext {
                 Argument<Object> argument = (Argument<Object>) beanType.getGenericBeanType();
                 @SuppressWarnings("unchecked")
                 Qualifier<Object> declaredQualifier = (Qualifier<Object>) beanType.getDeclaredQualifier();
-                this.disabledBeans.put(new BeanKey<>(argument, declaredQualifier), new DisabledBean<>(
+                this.disabledBeans.put(new BeanKey<>(argument, declaredQualifier), new BeanDefinitionProducer(new DisabledBean<>(
                     argument,
                     declaredQualifier,
                     reasons
-                ));
+                )));
             } catch (Exception | NoClassDefFoundError e) {
                 // it is theoretically possible that resolving the generic type results in an error
                 // in this case just ignore this as the maps built here are purely to aid error diagnosis
@@ -461,12 +450,22 @@ public class DefaultBeanContext implements InitializableBeanContext {
                 }
             }
 
+            singlesInCreation.clear();
             singletonBeanRegistrations.clear();
             beanConcreteCandidateCache.clear();
             beanCandidateCache.clear();
+            beanProxyTargetCache.clear();
             containsBeanCache.clear();
             beanConfigurations.clear();
+            disabledConfigurations.clear();
             singletonScope.clear();
+            beanDefinitionsClasses.clear();
+            disabledBeans.clear();
+            proxyTargetBeans.clear();
+            attributes.clear();
+            beanIndex.clear();
+            beanConfigurationsList = null;
+            beanDefinitionReferences = null;
             beanInitializedEventListeners = null;
             beanCreationEventListeners = null;
             beanPreDestroyEventListeners = null;
@@ -1145,7 +1144,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
             LOG.trace("Creating bean for parameters: {}", ArrayUtils.toString(args));
         }
         MutableConversionService conversionService = getConversionService();
-        Map<String, Object> argumentValues = new LinkedHashMap<>(requiredArguments.length);
+        Map<String, Object> argumentValues = CollectionUtils.newLinkedHashMap(requiredArguments.length);
         BeanResolutionContext.Path currentPath = resolutionContext.getPath();
         for (int i = 0; i < requiredArguments.length; i++) {
             Argument<?> requiredArgument = requiredArguments[i];
@@ -1291,14 +1290,14 @@ public class DefaultBeanContext implements InitializableBeanContext {
     @NonNull
     private <T> T triggerPreDestroyListeners(@NonNull BeanDefinition<T> beanDefinition, @NonNull T bean) {
         if (beanPreDestroyEventListeners == null) {
-            beanPreDestroyEventListeners = loadListeners(BeanPreDestroyEventListener.class).entrySet();
+            beanPreDestroyEventListeners = loadListeners(BeanPreDestroyEventListener.class);
         }
         if (!beanPreDestroyEventListeners.isEmpty()) {
             Class<T> beanType = getBeanType(beanDefinition);
-            for (Map.Entry<Class<?>, List<BeanPreDestroyEventListener>> entry : beanPreDestroyEventListeners) {
+            for (Map.Entry<Class<?>, ListenersSupplier<BeanPreDestroyEventListener>> entry : beanPreDestroyEventListeners) {
                 if (entry.getKey().isAssignableFrom(beanType)) {
                     final BeanPreDestroyEvent<T> event = new BeanPreDestroyEvent<>(this, beanDefinition, bean);
-                    for (BeanPreDestroyEventListener<T> listener : entry.getValue()) {
+                    for (BeanPreDestroyEventListener<T> listener : entry.getValue().get(null)) {
                         try {
                             bean = Objects.requireNonNull(
                                     listener.onPreDestroy(event),
@@ -1317,8 +1316,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
     private <T> void destroyProxyTargetBean(@NonNull BeanRegistration<T> registration, boolean dependent) {
         Set<Object> destroyed = Collections.emptySet();
-        if (registration instanceof BeanDisposingRegistration) {
-            BeanDisposingRegistration<?> disposingRegistration = (BeanDisposingRegistration<?>) registration;
+        if (registration instanceof BeanDisposingRegistration<?> disposingRegistration) {
             if (disposingRegistration.getDependents() != null) {
                 destroyed = Collections.newSetFromMap(new IdentityHashMap<>());
                 for (BeanRegistration<?> beanRegistration : disposingRegistration.getDependents()) {
@@ -1330,7 +1328,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
         BeanDefinition<T> proxyTargetBeanDefinition = findProxyTargetBeanDefinition(registration.beanDefinition)
                 .orElseThrow(() -> new IllegalStateException("Cannot find a proxy target bean definition for: " + registration.beanDefinition));
         Optional<CustomScope<?>> declaredScope = customScopeRegistry.findDeclaredScope(proxyTargetBeanDefinition);
-        if (!declaredScope.isPresent()) {
+        if (declaredScope.isEmpty()) {
             if (proxyTargetBeanDefinition.isSingleton()) {
                 return;
             }
@@ -1366,14 +1364,14 @@ public class DefaultBeanContext implements InitializableBeanContext {
     @NonNull
     private <T> void triggerBeanDestroyedListeners(@NonNull BeanDefinition<T> beanDefinition, @NonNull T bean) {
         if (beanDestroyedEventListeners == null) {
-            beanDestroyedEventListeners = loadListeners(BeanDestroyedEventListener.class).entrySet();
+            beanDestroyedEventListeners = loadListeners(BeanDestroyedEventListener.class);
         }
         if (!beanDestroyedEventListeners.isEmpty()) {
             Class<T> beanType = getBeanType(beanDefinition);
-            for (Map.Entry<Class<?>, List<BeanDestroyedEventListener>> entry : beanDestroyedEventListeners) {
+            for (Map.Entry<Class<?>, ListenersSupplier<BeanDestroyedEventListener>> entry : beanDestroyedEventListeners) {
                 if (entry.getKey().isAssignableFrom(beanType)) {
                     final BeanDestroyedEvent<T> event = new BeanDestroyedEvent<>(this, beanDefinition, bean);
-                    for (BeanDestroyedEventListener<T> listener : entry.getValue()) {
+                    for (BeanDestroyedEventListener<T> listener : entry.getValue().get(null)) {
                         try {
                             listener.onDestroyed(event);
                         } catch (Exception e) {
@@ -1501,21 +1499,18 @@ public class DefaultBeanContext implements InitializableBeanContext {
         return list;
     }
 
-    @SuppressWarnings("unchecked")
     @Override
     @NonNull
     public <T> T getProxyTargetBean(@NonNull Class<T> beanType, @Nullable Qualifier<T> qualifier) {
         ArgumentUtils.requireNonNull("beanType", beanType);
-        return getProxyTargetBean(Argument.of(beanType), qualifier);
+        return getProxyTargetBean(null, Argument.of(beanType), qualifier);
     }
 
     @NonNull
     @Override
     public <T> T getProxyTargetBean(@NonNull Argument<T> beanType, @Nullable Qualifier<T> qualifier) {
-        BeanDefinition<T> definition = getProxyTargetBeanDefinition(beanType, qualifier);
-        @SuppressWarnings("unchecked")
-        Qualifier<T> proxyQualifier = qualifier != null ? Qualifiers.byQualifiers(qualifier, PROXY_TARGET_QUALIFIER) : PROXY_TARGET_QUALIFIER;
-        return resolveBeanRegistration(null, definition, beanType, proxyQualifier).bean;
+        ArgumentUtils.requireNonNull("beanType", beanType);
+        return getProxyTargetBean(null, beanType, qualifier);
     }
 
     /**
@@ -1534,12 +1529,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
                                     @NonNull Argument<T> beanType,
                                     @Nullable Qualifier<T> qualifier) {
         BeanDefinition<T> definition = getProxyTargetBeanDefinition(beanType, qualifier);
-        @SuppressWarnings("unchecked")
-        Qualifier<T> proxyQualifier = qualifier != null ? Qualifiers.byQualifiers(qualifier, PROXY_TARGET_QUALIFIER) : PROXY_TARGET_QUALIFIER;
-        return resolveBeanRegistration(
-                resolutionContext,
-                definition, beanType, proxyQualifier
-        ).bean;
+        return resolveBeanRegistration(resolutionContext, definition, beanType, qualifier).bean;
     }
 
     @NonNull
@@ -1601,7 +1591,9 @@ public class DefaultBeanContext implements InitializableBeanContext {
         // first traverse component definition classes and load candidates
         Collection candidates;
         if (!beanDefinitionsClasses.isEmpty()) {
-            Stream<BeanDefinitionReference> reduced = qualifier.reduce(Object.class, beanDefinitionsClasses.stream());
+            Stream<BeanDefinitionReference> reduced = qualifier.reduce(Object.class, beanDefinitionsClasses.stream()
+                    .filter(p -> p.isReferenceEnabled(this))
+                    .map(BeanDefinitionProducer::getReference));
             Stream<BeanDefinition> candidateStream = qualifier.reduce(Object.class,
                     reduced
                             .map(ref -> ref.load(this))
@@ -1627,12 +1619,11 @@ public class DefaultBeanContext implements InitializableBeanContext {
         }
 
         if (!beanDefinitionsClasses.isEmpty()) {
-            List collection = beanDefinitionsClasses
+            return beanDefinitionsClasses
                     .stream()
-                    .map(ref -> ref.load(this))
-                    .filter(candidate -> candidate.isEnabled(this))
+                    .filter(p -> p.isDefinitionEnabled(this))
+                    .map(p -> p.getDefinition(this))
                     .collect(Collectors.toList());
-            return collection;
         }
 
         return (Collection<BeanDefinition<?>>) Collections.emptyMap();
@@ -1644,7 +1635,8 @@ public class DefaultBeanContext implements InitializableBeanContext {
     public Collection<BeanDefinitionReference<?>> getBeanDefinitionReferences() {
         if (!beanDefinitionsClasses.isEmpty()) {
             final List refs = beanDefinitionsClasses.stream()
-                    .filter(ref -> ref.isEnabled(this))
+                    .filter(p -> p.isReferenceEnabled(this))
+                    .map(BeanDefinitionProducer::getReference)
                     .toList();
 
             return refs;
@@ -1652,17 +1644,17 @@ public class DefaultBeanContext implements InitializableBeanContext {
         return Collections.emptyList();
     }
 
-    @SuppressWarnings("unchecked")
     @Override
     @NonNull
     public <B> BeanContext registerBeanDefinition(@NonNull RuntimeBeanDefinition<B> definition) {
         Objects.requireNonNull(definition, "Bean definition cannot be null");
         Class<B> beanType = definition.getBeanType();
-        this.beanDefinitionsClasses.add(definition);
+        BeanDefinitionProducer producer = new BeanDefinitionProducer(definition);
+        this.beanDefinitionsClasses.add(producer);
         for (Class<?> indexedType : indexedTypes) {
             if (indexedType == beanType || indexedType.isAssignableFrom(beanType)) {
-                final Collection<BeanDefinitionReference> indexed = resolveTypeIndex(indexedType);
-                indexed.add(definition);
+                final Collection<BeanDefinitionProducer> indexed = resolveTypeIndex(indexedType);
+                indexed.add(producer);
                 break;
             }
         }
@@ -1687,12 +1679,11 @@ public class DefaultBeanContext implements InitializableBeanContext {
         Class<B> beanType = definition.getBeanType();
         for (Class<?> indexedType : indexedTypes) {
             if (indexedType == beanType || indexedType.isAssignableFrom(beanType)) {
-                final Collection<BeanDefinitionReference> indexed = resolveTypeIndex(indexedType);
-                indexed.remove(definition);
+                resolveTypeIndex(indexedType).forEach(p -> p.disable(definition));
                 break;
             }
         }
-        this.beanDefinitionsClasses.remove(definition);
+        beanDefinitionsClasses.forEach(p -> p.disable(definition));
         purgeCacheForBeanType(definition.getBeanType());
     }
 
@@ -1931,91 +1922,73 @@ public class DefaultBeanContext implements InitializableBeanContext {
      * Initialize the event listeners.
      */
     protected void initializeEventListeners() {
-        final Map<Class<?>, List<BeanCreatedEventListener<?>>> beanCreatedListeners = loadCreatedListeners();
-        beanCreatedListeners.put(AnnotationProcessor.class, Collections.singletonList(new AnnotationProcessorListener()));
-        final Map<Class<?>, List<BeanInitializedEventListener>> beanInitializedListeners = loadListeners(BeanInitializedEventListener.class);
-        this.beanCreationEventListeners = beanCreatedListeners.entrySet();
-        this.beanInitializedEventListeners = beanInitializedListeners.entrySet();
-    }
-
-    private void handleEagerInitializedDependencies(BeanDefinition<?> listener,
-                                                    Argument<?> listensTo,
-                                                    List<List<Argument<?>>> targets) {
-        if (LOG.isWarnEnabled()) {
-            List<String> paths = new ArrayList<>(targets.size());
-            for (List<Argument<?>> line: targets) {
-                paths.add("    " + line.stream()
-                        .map(Argument::getType)
-                        .map(Class::getName)
-                        .collect(Collectors.joining(AbstractBeanResolutionContext.DefaultPath.RIGHT_ARROW)));
+        this.beanCreationEventListeners = loadListeners(BeanCreatedEventListener.class);
+        // Keep anonymous class to avoid lambda overhead during the startup
+        this.beanCreationEventListeners.add(new AbstractMap.SimpleEntry<>(AnnotationProcessor.class, new ListenersSupplier<BeanCreatedEventListener>() {
+            @Override
+            public Iterable<BeanCreatedEventListener> get(BeanResolutionContext beanResolutionContext) {
+                return Collections.singletonList(new AnnotationProcessorListener());
             }
-            LOG.warn("The bean created event listener {} will not be executed because one or more other bean created event listeners inject {}:\n" +
-                    "{}\n" +
-                    "Change at least one point in the path to be lazy initialized by injecting a provider to avoid this issue", listener.getBeanType().getName(), listensTo.getType().getName(), String.join("\n", paths));
-        }
+
+        }));
+        this.beanInitializedEventListeners = loadListeners(BeanInitializedEventListener.class);
     }
 
     @NonNull
-    private Map<Class<?>, List<BeanCreatedEventListener<?>>> loadCreatedListeners() {
-        final Collection<BeanDefinition<BeanCreatedEventListener>> beanDefinitions = getBeanDefinitions(BeanCreatedEventListener.class);
-        final HashMap<Class<?>, List<BeanCreatedEventListener<?>>> typeToListener = new HashMap<>(beanDefinitions.size(), 1);
-        if (beanDefinitions.isEmpty()) {
-            return typeToListener;
+    private <T extends EventListener> List<Map.Entry<Class<?>, ListenersSupplier<T>>> loadListeners(@NonNull Class<T> listenerType) {
+        final Map<Class<?>, List<BeanDefinition<T>>> typeToListener = getTypeToListenerMap(listenerType);
+        if (typeToListener.isEmpty()) {
+            return new ArrayList<>(1);
         }
-        final HashMap<BeanDefinition<?>, List<List<Argument<?>>>> invalidListeners = new HashMap<>();
-        final HashMap<BeanDefinition<?>, Argument<?>> beanCreationTargets = new HashMap<>();
-        for (BeanDefinition<BeanCreatedEventListener> beanCreatedDefinition: beanDefinitions) {
-            List<Argument<?>> typeArguments = beanCreatedDefinition.getTypeArguments(BeanCreatedEventListener.class);
+        List<Map.Entry<Class<?>, ListenersSupplier<T>>> eventToListeners = new ArrayList<>(typeToListener.size());
+        for (Map.Entry<Class<?>, List<BeanDefinition<T>>> e : typeToListener.entrySet()) {
+            eventToListeners.add(new AbstractMap.SimpleEntry<>(e.getKey(), new ListenersSupplier<>() {
+
+                // The supplier can be triggered concurrently.
+                // We allow for the listeners collection to be initialized multiple times.
+                private volatile List<T> listeners;
+
+                @Override
+                public Iterable<T> get(BeanResolutionContext beanResolutionContext) {
+                    if (listeners == null) {
+                        List<BeanDefinition<T>> listenersDefinitions = e.getValue();
+                        List<T> listeners = new ArrayList<>(listenersDefinitions.size());
+                        for (BeanDefinition<T> listenersDefinition : listenersDefinitions) {
+                            T listener;
+                            if (beanResolutionContext == null) {
+                                try (BeanResolutionContext context = newResolutionContext(listenersDefinition, null)) {
+                                    listener = resolveBeanRegistration(context, listenersDefinition).bean;
+                                }
+                            } else {
+                                listener = resolveBeanRegistration(beanResolutionContext, listenersDefinition).bean;
+                            }
+                            listeners.add(listener);
+                        }
+                        OrderUtil.sort(listeners);
+                        this.listeners = listeners;
+                    }
+                    return listeners;
+                }
+            }));
+        }
+        return eventToListeners;
+    }
+
+    @NonNull
+    private <T extends EventListener> Map<Class<?>, List<BeanDefinition<T>>> getTypeToListenerMap(@NonNull Class<T> listenerType) {
+        final Collection<BeanDefinition<T>> beanDefinitions = getBeanDefinitions(listenerType);
+        if (beanDefinitions.isEmpty()) {
+            return Collections.emptyMap();
+        }
+        final HashMap<Class<?>, List<BeanDefinition<T>>> typeToListener = CollectionUtils.newHashMap(beanDefinitions.size());
+        for (BeanDefinition<T> beanCreatedDefinition : beanDefinitions) {
+            List<Argument<?>> typeArguments = beanCreatedDefinition.getTypeArguments(listenerType);
             Argument<?> argument = CollectionUtils.last(typeArguments);
             if (argument == null) {
                 argument = Argument.OBJECT_ARGUMENT;
             }
-            beanCreationTargets.put(beanCreatedDefinition, argument);
-        }
-        for (BeanDefinition<BeanCreatedEventListener> beanCreatedDefinition: beanDefinitions) {
-            try (ScanningBeanResolutionContext context = new ScanningBeanResolutionContext(beanCreatedDefinition, beanCreationTargets)) {
-                BeanCreatedEventListener<?> listener = resolveBeanRegistration(context, beanCreatedDefinition).bean;
-                List<Argument<?>> typeArguments = beanCreatedDefinition.getTypeArguments(BeanCreatedEventListener.class);
-                Argument<?> argument = CollectionUtils.last(typeArguments);
-                if (argument == null) {
-                    argument = Argument.OBJECT_ARGUMENT;
-                }
-                typeToListener.computeIfAbsent(argument.getType(), aClass -> new ArrayList<>(10))
-                        .add(listener);
-                Map<BeanDefinition<?>, List<List<Argument<?>>>> foundTargets = context.getFoundTargets();
-                for (Map.Entry<BeanDefinition<?>, List<List<Argument<?>>>> entry: foundTargets.entrySet()) {
-                    invalidListeners.computeIfAbsent(entry.getKey(), key -> new ArrayList<>())
-                            .addAll(entry.getValue());
-                }
-            }
-        }
-        for (List<BeanCreatedEventListener<?>> listeners: typeToListener.values()) {
-            OrderUtil.sort(listeners);
-        }
-        for (Map.Entry<BeanDefinition<?>, List<List<Argument<?>>>> entry: invalidListeners.entrySet()) {
-            handleEagerInitializedDependencies(entry.getKey(), beanCreationTargets.get(entry.getKey()), entry.getValue());
-        }
-        return typeToListener;
-    }
-
-    @NonNull
-    private <T extends EventListener> Map<Class<?>, List<T>> loadListeners(@NonNull Class<T> listenerType) {
-        final Collection<BeanDefinition<T>> beanDefinitions = getBeanDefinitions(listenerType);
-        final HashMap<Class<?>, List<T>> typeToListener = new HashMap<>(beanDefinitions.size(), 1);
-        for (BeanDefinition<T> beanCreatedDefinition : beanDefinitions) {
-            try (BeanResolutionContext context = newResolutionContext(beanCreatedDefinition, null)) {
-                T listener = resolveBeanRegistration(context, beanCreatedDefinition).bean;
-                List<Argument<?>> typeArguments = beanCreatedDefinition.getTypeArguments(listenerType);
-                Argument<?> argument = CollectionUtils.last(typeArguments);
-                if (argument == null) {
-                    argument = Argument.OBJECT_ARGUMENT;
-                }
-                typeToListener.computeIfAbsent(argument.getType(), aClass -> new ArrayList<>(10))
-                        .add(listener);
-            }
-        }
-        for (List<T> listenerList : typeToListener.values()) {
-            OrderUtil.sort(listenerList);
+            typeToListener.computeIfAbsent(argument.getType(), aClass -> new ArrayList<>(10))
+                    .add(beanCreatedDefinition);
         }
         return typeToListener;
     }
@@ -2023,142 +1996,117 @@ public class DefaultBeanContext implements InitializableBeanContext {
     /**
      * Initialize the context with the given {@link io.micronaut.context.annotation.Context} scope beans.
      *
-     * @param contextScopeBeans The context scope beans
+     * @param eagerInitBeans The context scope beans
      * @param processedBeans    The beans that require {@link ExecutableMethodProcessor} handling
      * @param parallelBeans     The parallel bean definitions
      */
+    @Internal
     protected void initializeContext(
-            @NonNull List<BeanDefinitionReference> contextScopeBeans,
-            @NonNull List<BeanDefinitionReference> processedBeans,
-            @NonNull List<BeanDefinitionReference> parallelBeans) {
+            @NonNull List<BeanDefinitionProducer> eagerInitBeans,
+            @NonNull List<BeanDefinitionProducer> processedBeans,
+            @NonNull List<BeanDefinitionProducer> parallelBeans) {
 
-        if (CollectionUtils.isNotEmpty(contextScopeBeans)) {
-            final List<BeanDefinition> contextBeans = new ArrayList<>(contextScopeBeans.size());
-
-            for (BeanDefinitionReference contextScopeBean : contextScopeBeans) {
+        if (CollectionUtils.isNotEmpty(eagerInitBeans)) {
+            final List<BeanDefinition<Object>> eagerInit = new ArrayList<>(eagerInitBeans.size());
+            for (BeanDefinitionProducer contextScopeBean : eagerInitBeans) {
                 try {
-                    loadContextScopeBean(contextScopeBean, contextBeans::add);
+                    loadEagerBeans(contextScopeBean, eagerInit);
                 } catch (Throwable e) {
-                    throw new BeanInstantiationException("Bean definition [" + contextScopeBean.getName() + "] could not be loaded: " + e.getMessage(), e);
+                    throw new BeanInstantiationException("Bean definition [" + contextScopeBean.getReference().getName() + "] could not be loaded: " + e.getMessage(), e);
                 }
             }
-            filterReplacedBeans(null, (Collection) contextBeans);
-            OrderUtil.sort(contextBeans);
-            for (BeanDefinition contextScopeDefinition : contextBeans) {
+            filterReplacedBeans(null, eagerInit);
+            OrderUtil.sort(eagerInit);
+            for (BeanDefinition eagerInitDefinition : eagerInit) {
                 try {
-                    loadContextScopeBean(contextScopeDefinition);
+                    initializeEagerBean(eagerInitDefinition);
                 } catch (DisabledBeanException e) {
                     if (AbstractBeanContextConditional.ConditionLog.LOG.isDebugEnabled()) {
-                        AbstractBeanContextConditional.ConditionLog.LOG.debug("Bean of type [{}] disabled for reason: {}", contextScopeDefinition.getBeanType().getSimpleName(), e.getMessage());
+                        AbstractBeanContextConditional.ConditionLog.LOG.debug("Bean of type [{}] disabled for reason: {}", eagerInitDefinition.getBeanType().getSimpleName(), e.getMessage());
                     }
                 } catch (Throwable e) {
-                    throw new BeanInstantiationException("Bean definition [" + contextScopeDefinition.getName() + "] could not be loaded: " + e.getMessage(), e);
+                    throw new BeanInstantiationException("Bean definition [" + eagerInitDefinition.getName() + "] could not be loaded: " + e.getMessage(), e);
                 }
             }
         }
 
         if (!processedBeans.isEmpty()) {
+            List<BeanDefinitionMethodReference<Object, Object>> methodsToProcess = new ArrayList<>();
+            for (BeanDefinitionProducer processedBeanProducer : processedBeans) {
+                if (!processedBeanProducer.isDefinitionEnabled(this)) {
+                    continue;
+                }
+                BeanDefinition<Object> definition = processedBeanProducer.getDefinition(this);
+                for (ExecutableMethod<Object, ?> method : definition.getExecutableMethods()) {
+                    if (method.hasStereotype(Executable.class)) {
+                        methodsToProcess.add(BeanDefinitionMethodReference.of(definition, (ExecutableMethod<Object, Object>) method));
+                    }
+                }
+            }
 
-            @SuppressWarnings("unchecked") Stream<BeanDefinitionMethodReference<?, ?>> methodStream = processedBeans
-                    .stream()
-                    // is the bean reference enabled
-                    .filter(ref -> ref.isEnabled(this))
-                    // ok - continue and load it
-                    .map((Function<BeanDefinitionReference, BeanDefinition<?>>) reference -> {
-                        try {
-                            return reference.load(this);
-                        } catch (Exception e) {
-                            throw new BeanInstantiationException("Bean definition [" + reference.getName() + "] could not be loaded: " + e.getMessage(), e);
-                        }
-                    })
-                    // is the bean itself enabled
-                    .filter(bean -> bean.isEnabled(this))
-                    // ok continue and get all of the ExecutableMethod references
-                    .flatMap(beanDefinition ->
-                            beanDefinition.getExecutableMethods()
-                                    .parallelStream()
-                                    .filter(method -> method.hasStereotype(Executable.class))
-                                    .map((Function<ExecutableMethod<?, ?>, BeanDefinitionMethodReference<?, ?>>) executableMethod ->
-                                            BeanDefinitionMethodReference.of((BeanDefinition) beanDefinition, executableMethod)
-                                    )
-                    );
-
+            Map<Class<? extends Annotation>, List<BeanDefinitionMethodReference<?, ?>>> byAnnotation = CollectionUtils.newHashMap(methodsToProcess.size());
             // group the method references by annotation type such that we have a map of Annotation -> MethodReference
             // ie. Class<Scheduled> -> @Scheduled void someAnnotation()
-            Map<Class<? extends Annotation>, List<BeanDefinitionMethodReference<?, ?>>> byAnnotation = new HashMap<>(processedBeans.size());
-            methodStream.forEach(reference -> {
-                List<Class<? extends Annotation>> annotations = reference.getAnnotationTypesByStereotype(Executable.class);
-                annotations.forEach(annotation -> byAnnotation.compute(annotation, (ann, list) -> {
-                    if (list == null) {
-                        list = new ArrayList<>(10);
+            for (BeanDefinitionMethodReference<?, ?> executableMethod : methodsToProcess) {
+                List<Class<? extends Annotation>> annotations = executableMethod.getAnnotationTypesByStereotype(Executable.class);
+                for (Class<? extends Annotation> annotation : annotations) {
+                    List<BeanDefinitionMethodReference<?, ?>> references = byAnnotation.get(annotation);
+                    if (references == null) {
+                        references = new ArrayList<>(10);
+                        byAnnotation.put(annotation, references);
                     }
-                    list.add(reference);
-                    return list;
-                }));
-            });
+                    references.add(executableMethod);
+                }
+            }
 
             // Find ExecutableMethodProcessor for each annotation and process the BeanDefinitionMethodReference
-            byAnnotation.forEach((annotationType, methods) ->
-                    streamOfType(ExecutableMethodProcessor.class, Qualifiers.byTypeArguments(annotationType))
-                            .forEach(processor -> {
-                                if (processor instanceof LifeCycle<?>) {
-                                    ((LifeCycle<?>) processor).start();
-                                }
-                                for (BeanDefinitionMethodReference<?, ?> method : methods) {
+            for (Map.Entry<Class<? extends Annotation>, List<BeanDefinitionMethodReference<?, ?>>> entry : byAnnotation.entrySet()) {
+                Class<? extends Annotation> annotationType = entry.getKey();
+                List<BeanDefinitionMethodReference<?, ?>> methods = entry.getValue();
+                streamOfType(ExecutableMethodProcessor.class, Qualifiers.byTypeArguments(annotationType))
+                    .forEach(processor -> {
+                        if (processor instanceof LifeCycle<?>) {
+                            ((LifeCycle<?>) processor).start();
+                        }
+                        for (BeanDefinitionMethodReference<?, ?> method : methods) {
 
-                                    BeanDefinition<?> beanDefinition = method.getBeanDefinition();
+                            BeanDefinition<?> beanDefinition = method.getBeanDefinition();
 
-                                    // Only process the method if the the annotation is not declared at the class level
-                                    // If declared at the class level it will already have been processed by AnnotationProcessorListener
-                                    if (!beanDefinition.hasStereotype(annotationType)) {
-                                        //noinspection unchecked
-                                        if (method.hasDeclaredStereotype(Parallel.class)) {
-                                            ForkJoinPool.commonPool().execute(() -> {
-                                                try {
-                                                    processor.process(beanDefinition, method);
-                                                } catch (Throwable e) {
-                                                    if (LOG.isErrorEnabled()) {
-                                                        LOG.error("Error processing bean method " + beanDefinition + "." + method + " with processor (" + processor + "): " + e.getMessage(), e);
-                                                    }
-                                                    Boolean shutdownOnError = method.booleanValue(Parallel.class, "shutdownOnError").orElse(true);
-                                                    if (shutdownOnError) {
-                                                        stop();
-                                                    }
-                                                }
-                                            });
-                                        } else {
+                            // Only process the method if the annotation is not declared at the class level
+                            // If declared at the class level it will already have been processed by AnnotationProcessorListener
+                            if (!beanDefinition.hasStereotype(annotationType)) {
+                                if (method.hasDeclaredStereotype(Parallel.class)) {
+                                    ForkJoinPool.commonPool().execute(() -> {
+                                        try {
                                             processor.process(beanDefinition, method);
+                                        } catch (Throwable e) {
+                                            if (LOG.isErrorEnabled()) {
+                                                LOG.error("Error processing bean method " + beanDefinition + "." + method + " with processor (" + processor + "): " + e.getMessage(), e);
+                                            }
+                                            Boolean shutdownOnError = method.booleanValue(Parallel.class, "shutdownOnError").orElse(true);
+                                            if (shutdownOnError) {
+                                                stop();
+                                            }
                                         }
-                                    }
+                                    });
+                                } else {
+                                    processor.process(beanDefinition, method);
                                 }
+                            }
+                        }
 
-                                if (processor instanceof LifeCycle<?>) {
-                                    ((LifeCycle<?>) processor).stop();
-                                }
+                        if (processor instanceof LifeCycle<?>) {
+                            ((LifeCycle<?>) processor).stop();
+                        }
 
-                            }));
+                    });
+            }
         }
 
         if (CollectionUtils.isNotEmpty(parallelBeans)) {
             processParallelBeans(parallelBeans);
         }
-        final Runnable runnable = () ->
-                beanDefinitionsClasses.removeIf((BeanDefinitionReference beanDefinitionReference) ->
-                        !beanDefinitionReference.isEnabled(this));
-        ForkJoinPool.commonPool().execute(runnable);
-    }
-
-    /**
-     * Find bean candidates for the given type.
-     *
-     * @param <T>      The bean generic type
-     * @param beanType The bean type
-     * @param filter   A bean definition to filter out
-     * @return The candidates
-     */
-    @NonNull
-    protected <T> Collection<BeanDefinition<T>> findBeanCandidates(@NonNull Class<T> beanType, @Nullable BeanDefinition<?> filter) {
-        return findBeanCandidates(null, Argument.of(beanType), filter, true);
+        ForkJoinPool.commonPool().execute(() -> beanDefinitionsClasses.forEach(p -> p.isReferenceEnabled(this)));
     }
 
     /**
@@ -2168,14 +2116,12 @@ public class DefaultBeanContext implements InitializableBeanContext {
      * @param resolutionContext The current resolution context
      * @param beanType          The bean type
      * @param filter            A bean definition to filter out
-     * @param filterProxied     Whether to filter out bean proxy targets
      * @return The candidates
      */
     @NonNull
     protected <T> Collection<BeanDefinition<T>> findBeanCandidates(@Nullable BeanResolutionContext resolutionContext,
                                                                    @NonNull Argument<T> beanType,
-                                                                   @Nullable BeanDefinition<?> filter,
-                                                                   boolean filterProxied) {
+                                                                   @Nullable BeanDefinition<?> filter) {
         Predicate<BeanDefinition<T>> predicate = filter == null ? null : definition -> !definition.equals(filter);
         return findBeanCandidates(resolutionContext, beanType, true, predicate);
     }
@@ -2202,7 +2148,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
         }
         // first traverse component definition classes and load candidates
 
-        Collection<BeanDefinitionReference> beanDefinitionsClasses;
+        Collection<BeanDefinitionProducer> beanDefinitionsClasses;
 
         if (indexedTypes.contains(beanClass)) {
             beanDefinitionsClasses = beanIndex.get(beanClass);
@@ -2227,29 +2173,25 @@ public class DefaultBeanContext implements InitializableBeanContext {
         BeanResolutionContext resolutionContext,
         Argument<T> beanType,
         boolean collectIterables,
+        @Nullable
         Predicate<BeanDefinition<T>> predicate,
-        Collection<BeanDefinitionReference> beanDefinitionsClasses) {
+        Collection<BeanDefinitionProducer> beanDefinitionProducers) {
         Set<BeanDefinition<T>> candidates;
-        if (!beanDefinitionsClasses.isEmpty()) {
+        if (!beanDefinitionProducers.isEmpty()) {
 
             candidates = new HashSet<>();
-            for (BeanDefinitionReference reference : beanDefinitionsClasses) {
-                if (!reference.isCandidateBean(beanType) || !reference.isEnabled(this, resolutionContext)) {
+            for (BeanDefinitionProducer producer : beanDefinitionProducers) {
+                if (producer.isDisabled() || !producer.isReferenceCandidateBean(beanType) || !producer.isReferenceEnabled(this, resolutionContext)) {
                     continue;
                 }
-                BeanDefinition<T> loadedBean;
-                try {
-                    loadedBean = reference.load(this);
-                } catch (Throwable e) {
-                    throw new BeanContextException("Error loading bean [" + reference.getName() + "]: " + e.getMessage(), e);
-                }
+                BeanDefinition<T> loadedBean = producer.getDefinition(this);
                 if (!loadedBean.isCandidateBean(beanType)) {
                     continue;
                 }
                 if (predicate != null && !predicate.test(loadedBean)) {
                     continue;
                 }
-                if (!loadedBean.isEnabled(this, resolutionContext)) {
+                if (!producer.isDefinitionEnabled(this, resolutionContext)) {
                     continue;
                 }
 
@@ -2303,50 +2245,52 @@ public class DefaultBeanContext implements InitializableBeanContext {
         if (LOG.isDebugEnabled()) {
             LOG.debug("Finding candidate beans for instance: {}", instance);
         }
-        Collection<BeanDefinitionReference<T>> beanDefinitionsClasses = ((Collection) this.beanDefinitionsClasses);
+        Collection<BeanDefinitionProducer> beanProducers = this.beanDefinitionsClasses;
         final Class<?> beanClass = instance.getClass();
         Argument<?> beanType = Argument.of(beanClass);
         Collection<BeanDefinition<T>> beanDefinitions = (Collection<BeanDefinition<T>>) ((Map) beanCandidateCache).get(beanType);
-        if (beanDefinitions == null) {
-            // first traverse component definition classes and load candidates
-            if (!beanDefinitionsClasses.isEmpty()) {
-                List<BeanDefinition<T>> candidates = new ArrayList<>();
-                for (BeanDefinitionReference<T> reference : beanDefinitionsClasses) {
-                    if (!reference.isEnabled(this)) {
-                        continue;
-                    }
-                    Class<?> candidateType = reference.getBeanType();
-                    if (candidateType == null || !candidateType.isInstance(instance)) {
-                        continue;
-                    }
-                    BeanDefinition<T> candidate = reference.load(this);
-                    if (!candidate.isEnabled(this)) {
-                        continue;
-                    }
-                    candidates.add(candidate);
-                }
-
-                if (candidates.size() > 1) {
-                    // try narrow to exact type
-                    candidates = candidates
-                            .stream()
-                            .filter(candidate ->
-                                candidate.getBeanType() == beanClass
-                            )
-                            .collect(Collectors.toList());
-                }
-                if (LOG.isDebugEnabled()) {
-                    LOG.debug("Resolved bean candidates {} for instance: {}", candidates, instance);
-                }
-                beanDefinitions = candidates;
-            } else {
-                if (LOG.isDebugEnabled()) {
-                    LOG.debug("No bean candidates found for instance: {}", instance);
-                }
-                beanDefinitions = Collections.emptySet();
-            }
-            beanCandidateCache.put(beanType, (Collection) beanDefinitions);
+        if (beanDefinitions != null) {
+            return beanDefinitions;
         }
+        // first traverse component definition classes and load candidates
+        if (!beanDefinitionsClasses.isEmpty()) {
+            List<BeanDefinition<T>> candidates = new ArrayList<>();
+            for (BeanDefinitionProducer producer : beanProducers) {
+                if (producer.isDisabled() || !producer.isReferenceEnabled(this)) {
+                    continue;
+                }
+                BeanDefinitionReference<T> reference = producer.getReference();
+                Class<?> candidateType = reference.getBeanType();
+                if (candidateType == null || !candidateType.isInstance(instance)) {
+                    continue;
+                }
+                BeanDefinition<T> candidate = reference.load(this);
+                if (!candidate.isEnabled(this)) {
+                    continue;
+                }
+                candidates.add(candidate);
+            }
+
+            if (candidates.size() > 1) {
+                // try narrow to exact type
+                candidates = candidates
+                        .stream()
+                        .filter(candidate ->
+                            candidate.getBeanType() == beanClass
+                        )
+                        .collect(Collectors.toList());
+            }
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("Resolved bean candidates {} for instance: {}", candidates, instance);
+            }
+            beanDefinitions = candidates;
+        } else {
+            if (LOG.isDebugEnabled()) {
+                LOG.debug("No bean candidates found for instance: {}", instance);
+            }
+            beanDefinitions = Collections.emptySet();
+        }
+        beanCandidateCache.put(beanType, (Collection) beanDefinitions);
         return beanDefinitions;
     }
 
@@ -2465,15 +2409,17 @@ public class DefaultBeanContext implements InitializableBeanContext {
                                                   @NonNull BeanDefinition<T> beanDefinition,
                                                   @NonNull T bean,
                                                   @Nullable Qualifier<T> finalQualifier) {
-        Class<T> beanType = beanDefinition.getBeanType();
-        if (!(bean instanceof BeanCreatedEventListener) && CollectionUtils.isNotEmpty(beanCreationEventListeners)) {
-            for (Map.Entry<Class<?>, List<BeanCreatedEventListener<?>>> entry : beanCreationEventListeners) {
-                if (entry.getKey().isAssignableFrom(beanType)) {
-                    BeanKey<T> beanKey = new BeanKey<>(beanDefinition, finalQualifier);
-                    for (BeanCreatedEventListener<?> listener : entry.getValue()) {
-                        bean = (T) listener.onCreated(new BeanCreatedEvent(this, beanDefinition, beanKey, bean));
-                        if (bean == null) {
-                            throw new BeanInstantiationException(resolutionContext, "Listener [" + listener + "] returned null from onCreated event");
+        if (!(beanDefinition instanceof AbstractProviderDefinition<?>)) {
+            Class<T> beanType = beanDefinition.getBeanType();
+            if (!(bean instanceof BeanCreatedEventListener) && CollectionUtils.isNotEmpty(beanCreationEventListeners)) {
+                for (Map.Entry<Class<?>, ListenersSupplier<BeanCreatedEventListener>> entry : beanCreationEventListeners) {
+                    if (entry.getKey().isAssignableFrom(beanType)) {
+                        BeanKey<T> beanKey = new BeanKey<>(beanDefinition, finalQualifier);
+                        for (BeanCreatedEventListener<?> listener : entry.getValue().get(resolutionContext)) {
+                            bean = (T) listener.onCreated(new BeanCreatedEvent(this, beanDefinition, beanKey, bean));
+                            if (bean == null) {
+                                throw new BeanInstantiationException(resolutionContext, "Listener [" + listener + "] returned null from onCreated event");
+                            }
                         }
                     }
                 }
@@ -2489,10 +2435,10 @@ public class DefaultBeanContext implements InitializableBeanContext {
                                                               @NonNull BeanDefinition<T> beanDefinition) {
         Map<String, Object> convertedValues;
         if (argumentValues == null) {
-            convertedValues = requiredArguments.length == 0 ? null : new LinkedHashMap<>();
+            convertedValues = requiredArguments.length == 0 ? null : CollectionUtils.newLinkedHashMap(requiredArguments.length);
             argumentValues = Collections.emptyMap();
         } else {
-            convertedValues = new LinkedHashMap<>();
+            convertedValues = CollectionUtils.newLinkedHashMap(requiredArguments.length);
         }
         if (convertedValues == null) {
             return Collections.emptyMap();
@@ -2545,16 +2491,20 @@ public class DefaultBeanContext implements InitializableBeanContext {
      *
      * @param parallelBeans The parallel beans
      */
-    protected void processParallelBeans(List<BeanDefinitionReference> parallelBeans) {
+    @Internal
+    protected void processParallelBeans(List<BeanDefinitionProducer> parallelBeans) {
         if (!parallelBeans.isEmpty()) {
-            List<BeanDefinitionReference> finalParallelBeans = parallelBeans.stream().filter(bdr -> bdr.isEnabled(this)).collect(Collectors.toList());
+            List<BeanDefinitionProducer> finalParallelBeans = parallelBeans.stream()
+                    .filter(p -> p.isReferenceEnabled(this))
+                    .toList();
             if (!finalParallelBeans.isEmpty()) {
                 new Thread(() -> {
-                    Collection<BeanDefinition> parallelDefinitions = new ArrayList<>();
-                    finalParallelBeans.forEach(beanDefinitionReference -> {
+                    Collection<BeanDefinition<Object>> parallelDefinitions = new ArrayList<>();
+                    finalParallelBeans.forEach(producer -> {
                         try {
-                            loadContextScopeBean(beanDefinitionReference, parallelDefinitions::add);
+                            loadEagerBeans(producer, parallelDefinitions);
                         } catch (Throwable e) {
+                            BeanDefinitionReference<Object> beanDefinitionReference = producer.getReference();
                             LOG.error("Parallel Bean definition [" + beanDefinitionReference.getName() + "] could not be loaded: " + e.getMessage(), e);
                             Boolean shutdownOnError = beanDefinitionReference.getAnnotationMetadata().booleanValue(Parallel.class, "shutdownOnError").orElse(true);
                             if (shutdownOnError) {
@@ -2563,11 +2513,11 @@ public class DefaultBeanContext implements InitializableBeanContext {
                         }
                     });
 
-                    filterReplacedBeans(null, (Collection) parallelDefinitions);
+                    filterReplacedBeans(null, parallelDefinitions);
 
                     parallelDefinitions.forEach(beanDefinition -> ForkJoinPool.commonPool().execute(() -> {
                         try {
-                            loadContextScopeBean(beanDefinition);
+                            initializeEagerBean(beanDefinition);
                         } catch (Throwable e) {
                             LOG.error("Parallel Bean definition [" + beanDefinition.getName() + "] could not be loaded: " + e.getMessage(), e);
                             Boolean shutdownOnError = beanDefinition.getAnnotationMetadata().booleanValue(Parallel.class, "shutdownOnError").orElse(true);
@@ -2728,7 +2678,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
         Class<T> bt = getCanonicalBeanType(definitionToBeReplaced);
         if (annotationMetadata.hasAnnotation(DefaultImplementation.class)) {
             Optional<Class> defaultImpl = annotationMetadata.classValue(DefaultImplementation.class);
-            if (!defaultImpl.isPresent()) {
+            if (defaultImpl.isEmpty()) {
                 defaultImpl = annotationMetadata.classValue(DefaultImplementation.class, "name");
             }
             if (defaultImpl.filter(impl -> impl == bt).isPresent()) {
@@ -2751,18 +2701,19 @@ public class DefaultBeanContext implements InitializableBeanContext {
         }
     }
 
-    private void loadContextScopeBean(BeanDefinitionReference contextScopeBean, Consumer<BeanDefinition> beanDefinitionConsumer) {
-        if (contextScopeBean.isEnabled(this)) {
-            BeanDefinition beanDefinition = contextScopeBean.load(this);
+    private void loadEagerBeans(BeanDefinitionProducer producer, Collection<BeanDefinition<Object>> collector) {
+        if (producer.isReferenceEnabled(this)) {
+            BeanDefinitionReference<Object> reference = producer.getReference();
+            BeanDefinition<Object> beanDefinition = reference.load(this);
             try (BeanResolutionContext resolutionContext = newResolutionContext(beanDefinition, null)) {
                 if (beanDefinition.isEnabled(this, resolutionContext)) {
-                    beanDefinitionConsumer.accept(beanDefinition);
+                    collector.add(beanDefinition);
                 }
             }
         }
     }
 
-    private void loadContextScopeBean(BeanDefinition<Object> beanDefinition) {
+    private void initializeEagerBean(BeanDefinition<Object> beanDefinition) {
         if (beanDefinition.isIterable() || beanDefinition.hasStereotype(ConfigurationReader.class.getName())) {
             Set<BeanDefinition<Object>> beanCandidates = new HashSet<>(5);
 
@@ -3029,7 +2980,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
 
         final boolean isProxy = definition.isProxy();
 
-        if (isProxy && isScopedProxyDefinition && (qualifier == null || !qualifier.contains(PROXY_TARGET_QUALIFIER))) {
+        if (isProxy && isScopedProxyDefinition) {
             // AOP proxy
             Qualifier<T> q = qualifier;
             if (q == null) {
@@ -3364,38 +3315,49 @@ public class DefaultBeanContext implements InitializableBeanContext {
     }
 
     private void readAllBeanDefinitionClasses() {
-        List<BeanDefinitionReference> contextScopeBeans = new ArrayList<>(20);
-        List<BeanDefinitionReference> processedBeans = new ArrayList<>(10);
-        List<BeanDefinitionReference> parallelBeans = new ArrayList<>(10);
+        List<BeanDefinitionProducer> eagerInitBeans = new ArrayList<>(20);
+        List<BeanDefinitionProducer> processedBeans = new ArrayList<>(10);
+        List<BeanDefinitionProducer> parallelBeans = new ArrayList<>(10);
 
         List<BeanDefinitionReference> beanDefinitionReferences = resolveBeanDefinitionReferences();
-        List<BeanDefinitionReference> toRemove = new ArrayList<>(beanDefinitionReferences.size());
-        beanDefinitionsClasses.addAll(beanDefinitionReferences);
 
-        Set<BeanConfiguration> configurationsDisabled = new HashSet<>();
-        for (BeanConfiguration bc : beanConfigurations.values()) {
+        List<BeanDefinitionProducer> producers = new ArrayList<>(beanDefinitionReferences.size());
+        List<BeanDefinitionProducer> proxyTargetBeans = new ArrayList<>(beanDefinitionReferences.size());
+        for (BeanDefinitionReference beanDefinitionReference : beanDefinitionReferences) {
+            producers.add(new BeanDefinitionProducer(beanDefinitionReference));
+        }
+        beanDefinitionsClasses.addAll(producers);
+
+        Collection<BeanConfiguration> allConfigurations = beanConfigurations.values();
+        List<BeanConfiguration> configurationsDisabled = new ArrayList<>(allConfigurations.size());
+        for (BeanConfiguration bc : allConfigurations) {
             if (!bc.isEnabled(this)) {
                 configurationsDisabled.add(bc);
             }
         }
 
         reference:
-        for (BeanDefinitionReference beanDefinitionReference : beanDefinitionReferences) {
+        for (BeanDefinitionProducer beanDefinitionProducer : producers) {
+            if (beanDefinitionProducer.isDisabled()) {
+                continue;
+            }
+            BeanDefinitionReference beanDefinitionReference = beanDefinitionProducer.reference;
             for (BeanConfiguration disableConfiguration : configurationsDisabled) {
                 if (disableConfiguration.isWithin(beanDefinitionReference)) {
-                    toRemove.add(beanDefinitionReference);
+                    beanDefinitionProducer.referenceEnabled = false;
                     continue reference;
                 }
             }
 
             if (beanDefinitionReference.isProxiedBean()) {
-                toRemove.add(beanDefinitionReference);
+                beanDefinitionProducer.referenceEnabled = false;
+                BeanDefinitionProducer proxyBeanProducer = new BeanDefinitionProducer(beanDefinitionReference);
                 if (beanDefinitionReference.requiresMethodProcessing()) {
-                    processedBeans.add(beanDefinitionReference);
+                    processedBeans.add(proxyBeanProducer);
                 }
                 // retain only if proxy target otherwise the target is never used
                 if (beanDefinitionReference.isProxyTarget()) {
-                    this.proxyTargetBeans.add(beanDefinitionReference);
+                    proxyTargetBeans.add(proxyBeanProducer);
                 }
                 continue;
             }
@@ -3406,34 +3368,35 @@ public class DefaultBeanContext implements InitializableBeanContext {
                 //noinspection ForLoopReplaceableByForEach
                 for (int i = 0; i < indexes.length; i++) {
                     Class<?> indexedType = indexes[i];
-                    resolveTypeIndex(indexedType).add(beanDefinitionReference);
+                    resolveTypeIndex(indexedType).add(beanDefinitionProducer);
                 }
             } else {
                 if (annotationMetadata.hasStereotype(ADAPTER_TYPE)) {
                     final Class<?> aClass = annotationMetadata.classValue(ADAPTER_TYPE, AnnotationMetadata.VALUE_MEMBER).orElse(null);
                     if (indexedTypes.contains(aClass)) {
-                        resolveTypeIndex(aClass).add(beanDefinitionReference);
+                        resolveTypeIndex(aClass).add(beanDefinitionProducer);
                     }
                 }
             }
             if (isEagerInit(beanDefinitionReference)) {
-                contextScopeBeans.add(beanDefinitionReference);
+                eagerInitBeans.add(beanDefinitionProducer);
             } else if (annotationMetadata.hasDeclaredStereotype(PARALLEL_TYPE)) {
-                parallelBeans.add(beanDefinitionReference);
+                parallelBeans.add(beanDefinitionProducer);
             }
 
             if (beanDefinitionReference.requiresMethodProcessing()) {
-                processedBeans.add(beanDefinitionReference);
+                processedBeans.add(beanDefinitionProducer);
             }
 
         }
 
-        this.beanDefinitionsClasses.removeAll(toRemove);
         this.beanDefinitionReferences = null;
         this.beanConfigurationsList = null;
 
+        this.proxyTargetBeans.addAll(proxyTargetBeans);
+
         initializeEventListeners();
-        initializeContext(contextScopeBeans, processedBeans, parallelBeans);
+        initializeContext(eagerInitBeans, processedBeans, parallelBeans);
     }
 
     private boolean isEagerInit(BeanDefinitionReference beanDefinitionReference) {
@@ -3443,7 +3406,7 @@ public class DefaultBeanContext implements InitializableBeanContext {
     }
 
     @NonNull
-    private Collection<BeanDefinitionReference> resolveTypeIndex(Class<?> indexedType) {
+    private Collection<BeanDefinitionProducer> resolveTypeIndex(Class<?> indexedType) {
         return beanIndex.computeIfAbsent(indexedType, aClass -> {
             indexedTypes.add(indexedType);
             return new ArrayList<>(20);
@@ -3568,21 +3531,15 @@ public class DefaultBeanContext implements InitializableBeanContext {
             }
             addCandidateToList(resolutionContext, definition, beanType, qualifier, beansOfTypeList);
         }
-        Collection<BeanRegistration<T>> result = beansOfTypeList;
         if (beansOfTypeList != Collections.EMPTY_SET) {
-            Stream<BeanRegistration<T>> stream = beansOfTypeList.stream();
             if (Ordered.class.isAssignableFrom(beanType.getType())) {
-                result = stream
-                        .sorted(OrderUtil.COMPARATOR)
-                        .collect(StreamUtils.toImmutableCollection());
-            } else {
-                if (hasOrderAnnotation) {
-                    stream = stream.sorted(BEAN_REGISTRATION_COMPARATOR);
-                }
-                result = stream.collect(StreamUtils.toImmutableCollection());
+                return beansOfTypeList.stream().sorted(OrderUtil.COMPARATOR).toList();
+            }
+            if (hasOrderAnnotation) {
+                return beansOfTypeList.stream().sorted(BEAN_REGISTRATION_COMPARATOR).toList();
             }
         }
-        return result;
+        return beansOfTypeList;
     }
 
     private <T> void logResolvedExistingBeanRegistrations(Argument<T> beanType, Qualifier<T> qualifier, Collection<BeanRegistration<T>> existing) {
@@ -3950,6 +3907,28 @@ public class DefaultBeanContext implements InitializableBeanContext {
     }
 
     /**
+     * Internal supplier of listeners.
+     *
+     * @param <T> The listener type
+     *
+     * @author Denis Stepanov
+     * @since 4.0.0
+     */
+    @Internal
+    interface ListenersSupplier<T extends EventListener> {
+
+        /**
+         * Retrieved the listeners lazily.
+         *
+         * @param beanResolutionContext The bean resolution context
+         * @return the collection of listeners
+         */
+        @NonNull
+        Iterable<T> get(@Nullable BeanResolutionContext beanResolutionContext);
+
+    }
+
+    /**
      * Class used as a bean key.
      *
      * @param <T> The bean type
@@ -4117,48 +4096,123 @@ public class DefaultBeanContext implements InitializableBeanContext {
         Collection<BeanRegistration<T>> registrations;
     }
 
-    private final class ScanningBeanResolutionContext extends SingletonBeanResolutionContext {
+    /**
+     * The class adds the caching of the enabled decision + the definition instance.
+     * NOTE: The class can be accesed in multiple threads, we do allow for the fields to be possibly intitialized concurrently - multiple times.
+     *
+     * @since 4.0.0
+     */
+    @Internal
+    static final class BeanDefinitionProducer {
 
-        private final HashMap<BeanDefinition<?>, Argument<?>> beanCreationTargets;
-        private final Map<BeanDefinition<?>, List<List<Argument<?>>>> foundTargets = new HashMap<>();
+        @Nullable
+        private volatile BeanDefinitionReference reference;
+        @Nullable
+        private volatile BeanDefinition definition;
+        @Nullable
+        private volatile Boolean referenceEnabled;
+        @Nullable
+        private volatile Boolean definitionEnabled;
 
-        private ScanningBeanResolutionContext(BeanDefinition<?> beanDefinition, HashMap<BeanDefinition<?>, Argument<?>> beanCreationTargets) {
-            super(beanDefinition);
-            this.beanCreationTargets = beanCreationTargets;
+        BeanDefinitionProducer(@NonNull BeanDefinitionReference reference) {
+            this.reference = reference;
         }
 
-        private List<Argument<?>> getHierarchy() {
-            List<Argument<?>> hierarchy = new ArrayList<>(path.size());
-            for (Iterator<BeanResolutionContext.Segment<?, ?>> it = path.descendingIterator(); it.hasNext();) {
-                BeanResolutionContext.Segment<?, ?> segment = it.next();
-                hierarchy.add(segment.getArgument());
+        public boolean isReferenceEnabled(DefaultBeanContext context) {
+            return isReferenceEnabled(context, null);
+        }
+
+        public boolean isReferenceEnabled(DefaultBeanContext context, @Nullable BeanResolutionContext resolutionContext) {
+            BeanDefinitionReference<?> ref = reference;
+            // The reference needs to be assigned to a new variable as it can change between checks
+            if (ref == null) {
+                return false;
             }
-            return hierarchy;
-        }
-
-        @Override
-        protected void onNewSegment(Segment<?, ?> segment) {
-            Argument<?> argument = segment.getArgument();
-            if (argument.isContainerType()) {
-                argument = argument.getFirstTypeVariable().orElse(null);
-                if (argument == null) {
-                    return;
+            if (referenceEnabled == null) {
+                if (ref.isEnabled(context, resolutionContext)) {
+                    referenceEnabled = true;
+                } else {
+                    referenceEnabled = false;
+                    reference = null;
                 }
             }
-            if (argument.isProvider()) {
-                return;
+            return referenceEnabled;
+        }
+
+        public boolean isDisabled() {
+            if (reference == null) {
+                return true;
             }
-            for (Map.Entry<BeanDefinition<?>, Argument<?>> entry : beanCreationTargets.entrySet()) {
-                if (argument.isAssignableFrom(entry.getValue())) {
-                    foundTargets.computeIfAbsent(entry.getKey(), bd -> new ArrayList<>(5))
-                            .add(getHierarchy());
+            Boolean refEnabled = referenceEnabled;
+            // The reference needs to be assigned to a new variable as it can change between checks
+            if (refEnabled != null && !refEnabled) {
+                return true;
+            }
+            Boolean defEnabled = definitionEnabled;
+            // The reference needs to be assigned to a new variable as it can change between checks
+            return defEnabled != null && !defEnabled;
+        }
+
+        public boolean isDefinitionEnabled(DefaultBeanContext defaultBeanContext) {
+            return isDefinitionEnabled(defaultBeanContext, null);
+        }
+
+        public boolean isDefinitionEnabled(DefaultBeanContext context, @Nullable BeanResolutionContext resolutionContext) {
+            if (definitionEnabled == null) {
+                if (isReferenceEnabled(context, resolutionContext)) {
+                    BeanDefinition <?> def = getDefinition(context);
+                    if (def.isEnabled(context, resolutionContext)) {
+                        definition = def;
+                        definitionEnabled = true;
+                    } else {
+                        definitionEnabled = false;
+                    }
+                } else {
+                    definitionEnabled = false;
                 }
+            }
+            return definitionEnabled;
+        }
+
+        public <T> BeanDefinitionReference<T> getReference() {
+            // The reference needs to be assigned to a new variable as it can change between checks
+            Boolean refEnabled = referenceEnabled;
+            if (reference == null || refEnabled == null || !refEnabled) {
+                throw new IllegalStateException("The reference is not enabled");
+            }
+            return reference;
+        }
+
+        public <T> BeanDefinition<T> getDefinition(BeanContext beanContext) {
+            // The reference needs to be assigned to a new variable as it can change between checks
+            Boolean defEnabled = definitionEnabled;
+            if (defEnabled != null && !defEnabled) {
+                throw new IllegalStateException("The definition is not enabled");
+            }
+            try {
+                BeanDefinition def = definition;
+                if (def == null) {
+                    def = getReference().load(beanContext);
+                    definition = def;
+                }
+                return def;
+            } catch (Throwable e) {
+                throw new BeanInstantiationException("Bean definition [" + reference.getName() + "] could not be loaded: " + e.getMessage(), e);
             }
         }
 
-        @SuppressWarnings("java:S1452")
-        Map<BeanDefinition<?>, List<List<Argument<?>>>> getFoundTargets() {
-            return foundTargets;
+        public <T> boolean isReferenceCandidateBean(Argument<T> beanType) {
+            // The reference needs to be assigned to a new variable as it can change between checks
+            BeanDefinitionReference ref = reference;
+            return ref != null && ref.isCandidateBean(beanType);
+        }
+
+        public void disable(BeanDefinitionReference<?> reference) {
+            // The reference needs to be assigned to a new variable as it can change between checks
+            BeanDefinitionReference ref = this.reference;
+            if (ref != null && ref.equals(reference)) {
+                this.reference = null;
+            }
         }
     }
 }
